# routes/api.php
@@ -2,8 +2,11 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\CategoriesController;
+use App\Http\Controllers\AuthController;
 
-Route::prefix('api')->group(function () {
+Route::middleware(['api'])->group(function () {
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/register', [AuthController::class, 'register']);
     Route::get('/categories', [CategoriesController::class, 'index']);
     Route::post('/categories', [CategoriesController::class, 'store']);
     Route::get('/categories/{id}', [CategoriesController::class, 'show']);
